--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "type": "module",
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
+  },
+  "scripts": {
+    "dev": "node ./node_modules/concurrently/dist/bin/concurrently.js \"./node_modules/vite/bin/vite.js build --watch\" \"npx tailwind -i ./src/index.css -o ./static/index.css --watch\"",
+    "build": "node ./node_modules/concurrently/dist/bin/concurrently.js \"./node_modules/vite/bin/vite.js build\" \"npx tailwind -i ./src/index.css -o ./static/index.css\""
   },
   "dependencies": {
     "htmx.org": "^1.9.10"
