--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     depends_on:
       database:
         condition: service_healthy
+    environment:
+      - DB_URL=root:safe_pwd@tcp(database:3306)/database
 
   database:
     image: mysql:5.7
