--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-go-template": "^0.0.15",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
   },
