--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node ./node_modules/concurrently/dist/bin/concurrently.js \"./node_modules/vite/bin/vite.js build\" \"npx tailwind -i ./src/index.css -o ./static/index.css\""
   },
   "dependencies": {
-    "htmx.org": "^1.9.10"
+    "htmx.org": "^1.9.10",
+    "sortablejs": "^1.15.1"
   }
 }
